# HuffmanAlgorithm2018

./: .gitignore  CMakeLists.txt  consentimento.txt  main.c
TADs/: hash_table.h  heap.h  nodes.h  tree.h  utilities.h
compress/: compress.h
decompress/: decompress.h
tests/: HashTable_Test.h  Heap_Test.h  Main_Test.h  Tree_Test.h  main_test.h  minunit.h  teste.h  teste_hash.h  teste_heap.h
